# playwright_python_tests_with_po

./: .gitignore  pyproject.toml
.github/workflows/: chromium_only.yml  firefox_only.yml  regression.yml
playwright_tests_with_po/pages/: base_page.py  base_swag_lab_page.py  checkout_page.py  inventory_page.py  login_page.py  shopping_cart_page.py
playwright_tests_with_po/test_data/: credentials.py
playwright_tests_with_po/utils/: choice_random_items.py  random_data.py  sorting.py
tests/: conftest.py  test_buy_some_products.py  test_shopping_cart.py  test_sorting.py
