[tool.poetry]
name = "playwright-tests-with-po"
version = "0.1.0"
description = ""
authors = ["Bohdan Obruch <bodan1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-playwright = "^0.5.1"
playwright = "^1.45.0"
pytest-json-ctrf = "^0.3.1"
pytestomatio = "^2.5.3"
pytest = "8.3.1"
pytest-dotenv = "^0.5.2"
faker = "^26.0.0"
pytest-xdist = "^3.6.1"
pytest-base-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = """
        --ctrf report.json -m 'not smoke' -n 5
        --base_url https://www.saucedemo.com/
        """

testpaths = [
    "tests",
]

